--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   mvc:
-    throw-exception-if-no-handler-found: 'true'
+    throw-exception-if-no-handler-found: true
   #--- Postgres datasource ---
   datasource:
     url: jdbc:postgresql://localhost:5432/parallel
@@ -15,7 +15,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
-    show-sql: false
+    show-sql: true
 
 #--- JWT constraints ---
 jwt:
